fix: default margin causes page to overflow height

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,4 +7,5 @@ body {
   align-items: center;
   justify-content: center;
   height: 100%;
+  margin: 0px;
 }
